Update to latest upstream release

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "libformula-1.1.6.zip": 54a4a0b5eea4352fee92eacbd5424a45149cef6f
+  libformula-1.1.3-jarsdeleted.zip: 8851047b09a06aa2b58a409196d8d61afaca9ea9
